--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,15 @@ a {
 	text-decoration: none;
 }
 
+.about {
+	display: flex;
+}
+
+.about > div {
+	width: 50%;
+	padding: 1em;
+}
+
 .contact {
 	height: 6.3em;
 }
@@ -34,13 +43,6 @@ a {
 	padding-bottom: 1em;
 }
 
-.nav-bar:after, .contact:after {
-	content: "";
-	display: inline-block;
-	border-bottom: 0.1em solid rgba(153, 153, 153, 0.4);
-	width: 70%;
-}
-
 .nav-bar__header {
 	font-size: 3.5em;
 }
@@ -52,6 +54,10 @@ a {
 
 .nav-bar__link:hover, .contact a:hover {
 	color: rgb(51, 51, 51);
+}
+
+.player-container {
+	display: inline-block;
 }
 
 .videos-list {
@@ -71,5 +77,13 @@ a {
 	display: inline-block;
 	font-size: 0.75em;
 	overflow-wrap: break-word;
+	width: 70%;
+}
+
+/* pseudo-selectors */
+.about:after, .contact:after, .nav-bar:after {
+	content: "";
+	display: inline-block;
+	border-bottom: 0.1em solid rgba(153, 153, 153, 0.4);
 	width: 70%;
 }
