--- a/style/style.css
+++ b/style/style.css
@@ -58,6 +58,10 @@ a {
 	font-size: 3.5em;
 }
 
+.nav-bar__header:hover {
+	opacity: 0.8;
+}
+
 .nav-bar__link {
 	color: rgb(153, 153, 153);
 	margin: 0em 0.7em;
