closes #2 links now change colors when component is active

--- a/style/style.css
+++ b/style/style.css
@@ -67,7 +67,7 @@ a {
 	margin: 0em 0.7em;
 }
 
-.nav-bar__link:hover, .contact a:hover {
+.nav-bar__link:hover, .nav-bar__link--selected, .contact a:hover {
 	color: rgb(51, 51, 51);
 }
 
