Changes to Two Column Layout from Three, Ups Image Sizes
- noticing response network request for images takes a second now, more reason to think about caching and loading state spinner when making infra migration?
- closes #26

--- a/style/style.css
+++ b/style/style.css
@@ -135,7 +135,11 @@ a {
 .videos-list__each {
 	cursor: pointer;
 	margin-bottom: 0.625em;
-	width: 33.33%;
+	width: 50%;
+}
+
+.videos-list__each__img {
+	width: 90%;
 }
 
 .videos-list__each__img:hover {
