Update Mobile Menu to Have Cursor on Desktop
- closes #31

--- a/style/style.css
+++ b/style/style.css
@@ -122,6 +122,10 @@ a {
 	margin-bottom: 1.5em;
 }
 
+.wrapper--mobile {
+	cursor: pointer;
+}
+
 .videos-list {
     box-sizing: border-box;
 	display: flex;
